--- a/vignettes/morphoBlocks_vignette.Rmd
+++ b/vignettes/morphoBlocks_vignette.Rmd
@@ -5,8 +5,8 @@ date: "`r Sys.Date()`"
 output: 
   html_vignette: 
     toc: true
-    fig_width: 7
-    fig_height: 6
+    fig_width: 6
+    fig_height: 5
     fig_caption: true
 vignette: >
   %\VignetteIndexEntry{Constructing a morphospace for a partial-wing skeleton}
@@ -18,7 +18,7 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  tidy.opts = list(width.cutoff = 60),
+  tidy.opts = list(width.cutoff = 90),
   tidy = TRUE
 )
 ```
@@ -31,7 +31,8 @@ The multiple-part objects in this example are partial wing skeletons comprised o
 
 |    Shape data from the multiple-part objects are provided as landmark configurations. Three sets of landmarks were produced for each of the digital replicas so that the replicates could be averaged to mitigate effects of placement error. The nine sets of landmark configurations (i.e. three sets from each of the three bones) were separately read into `R` using `readPts` with `gpa = FALSE` (i.e. generalised Procrustes transformation not performed) and are available by calling `morphoBlocks`. The function `readPts` is a wrapper for the `read.pts` and `cSize` functions from `Morpho` (Schlager 2017). First, load the dataset:
 
-``` r
+``` {r warnings = FALSE, message = FALSE}
+library(morphoBlocks)
 data(penguinWings)
 ```
 
@@ -39,8 +40,8 @@ data(penguinWings)
 
 The analysis in this example will use the mean values of the three replicate landmark configurations from each part. Creating these averaged values requires averaging the configurations stored in the @raw term of their respective block-class objects. 
 
-``` r
-# Extract and average the landmark configurations.
+``` {r}
+# Extract and average the landmark configurations
 hum_av = (hum1@raw + hum2@raw + hum3@raw)/3
 rad_av = (rad1@raw + rad2@raw + rad3@raw)/3
 uln_av = (uln1@raw + uln2@raw + uln3@raw)/3
@@ -50,7 +51,7 @@ uln_av = (uln1@raw + uln2@raw + uln3@raw)/3
 
 Each set of averaged landmarks can now be formatted into a data block with the `formatBlock` function. Here, we will use the @curves term from one of the replicates, and will set `gpa = TRUE` to perform generalised Procrustes transformation on the landmark configurations. Generalised Procrustes transformation is performed using `gpagen` from `geomorph` (Adams & Otárola-Castillo, 2013), which is called by `formatBlock`. 
 
-``` r
+``` {r}
 # Format the averaged landmark configurations into data blocks
 block1 = formatBlock(hum_av, curves = hum1@curves, k = 3, gpa = TRUE)
 block2 = formatBlock(rad_av, curves = rad1@curves, k = 3, gpa = TRUE)
@@ -61,7 +62,7 @@ block3 = formatBlock(uln_av, curves = uln1@curves, k = 3, gpa = TRUE)
 
 The three data blocks of Procrustes-transformed configurations (humerus, radius, ulna) are organised into a list of data blocks and scaled using the normalised weighted centroid size method from Collyer et al. (2020). 
 
-``` r
+``` {r}
 # Scale and combine data blocks into a single list of blocks
 blocklist = combineBlocks(blocks = c(block1, block2, block3))
 ```
@@ -70,7 +71,7 @@ blocklist = combineBlocks(blocks = c(block1, block2, block3))
 
 The scaled data blocks are analysed with regularised consensus principal component analysis (RCPCA) in mode 2 using the `rgcca` function from `RGCCA` (Tenenhaus & Guillemot, 2017), which is called by `analyseBlocks` when `option = 'rcpca'`.
 
-``` r
+``` {r}
 # Analyse the list of data blocks using RCPCA
 result = analyseBlocks(blocklist, ncomp = 10)
 ```
@@ -79,12 +80,9 @@ result = analyseBlocks(blocklist, ncomp = 10)
 
 Use `scoresPlot` to show the consensus space from the analysis, which here represents a morphospace for the partial-wing skeleton.
 
-``` r
-# Setup colour vector to show different ages of fossil penguins. Paleocene (brown),
-stem-lineage penguins from the Oligocene (light brown), and extant penguins (white).
-pcol = c("#ffffff", "#ffffff", "#ffffff", "#ffffff", "#e6b481", "#ffffff", "#ffffff",
-"#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#feebd3",
-"#feebd3", "#ffffff", "#e6b481", "#feebd3", "#ffffff")
+``` {r}
+# Setup colour vector to show different ages of fossil penguins. Paleocene (brown), stem-lineage penguins from the Oligocene (light brown), and extant penguins (white).
+pcol = c("#ffffff", "#ffffff", "#ffffff", "#ffffff", "#e6b481", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#feebd3", "#feebd3", "#ffffff", "#e6b481", "#feebd3", "#ffffff")
 
 # Plot consensus space showing global component one (GC1) and global component one (GC2) 
 scoresPlot(result, pcol = pcol)
